--- a/Draw.csproj
+++ b/Draw.csproj
@@ -75,6 +75,7 @@
     <Compile Include="src\Model\LineShape.cs" />
     <Compile Include="src\Model\EllipseShape.cs" />
     <Compile Include="src\Model\RectangleShape.cs" />
+    <Compile Include="src\Model\SelectionGroup.cs" />
     <Compile Include="src\Model\Shape.cs" />
     <Compile Include="src\Model\TriangleShape.cs" />
     <Compile Include="src\Processors\DialogProcessor.cs" />
