--- a/Draw.csproj
+++ b/Draw.csproj
@@ -71,13 +71,13 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\GUI\Program.cs" />
-    <Compile Include="src\Model\Shapes\Image.cs" />
-    <Compile Include="src\Model\Shapes\LineShape.cs" />
-    <Compile Include="src\Model\Shapes\EllipseShape.cs" />
-    <Compile Include="src\Model\Shapes\RectangleShape.cs" />
+    <Compile Include="src\Model\EllipseShape.cs" />
+    <Compile Include="src\Model\Image.cs" />
+    <Compile Include="src\Model\LineShape.cs" />
+    <Compile Include="src\Model\RectangleShape.cs" />
     <Compile Include="src\Model\SelectionGroup.cs" />
-    <Compile Include="src\Model\Shapes\Shape.cs" />
-    <Compile Include="src\Model\Shapes\TriangleShape.cs" />
+    <Compile Include="src\Model\Shape.cs" />
+    <Compile Include="src\Model\TriangleShape.cs" />
     <Compile Include="src\Processors\DialogProcessor.cs" />
     <Compile Include="src\Processors\DisplayProcessor.cs" />
     <Compile Include="src\Processors\GeometricProcessor.cs" />
