--- a/Draw.csproj
+++ b/Draw.csproj
@@ -72,10 +72,10 @@
     </Compile>
     <Compile Include="src\GUI\Program.cs" />
     <Compile Include="src\Model\EllipseShape.cs" />
+    <Compile Include="src\Model\GroupShape.cs" />
     <Compile Include="src\Model\Image.cs" />
     <Compile Include="src\Model\LineShape.cs" />
     <Compile Include="src\Model\RectangleShape.cs" />
-    <Compile Include="src\Model\SelectionGroup.cs" />
     <Compile Include="src\Model\Shape.cs" />
     <Compile Include="src\Model\TriangleShape.cs" />
     <Compile Include="src\Processors\DialogProcessor.cs" />
