--- a/Draw.csproj
+++ b/Draw.csproj
@@ -81,6 +81,7 @@
     <Compile Include="src\Model\CustomShape.cs" />
     <Compile Include="src\Model\EllipseShape.cs" />
     <Compile Include="src\Model\GroupShape.cs" />
+    <Compile Include="src\Model\IShape.cs" />
     <Compile Include="src\Model\LineShape.cs" />
     <Compile Include="src\Model\RectangleShape.cs" />
     <Compile Include="src\Model\Shape.cs" />
